--- a/plugins/templates/minimalistic/resources/search.css
+++ b/plugins/templates/minimalistic/resources/search.css
@@ -1,4 +1,4 @@
-/* search */
+﻿/* search */
 input.search-query[type="search"] {
     background-color: rgb(246, 246, 246);
     background-image: none;
@@ -6,8 +6,8 @@ input.search-query[type="search"] {
     background-attachment: scroll;
     background-clip: border-box;
     background-origin: padding-box;
-    background-position-x: 0%;
-    background-position-y: 0%;
+    background-position-x: 0;
+    background-position-y: 0;
     background-size: auto auto;
     color: #333333;
     font-size: 15px;
@@ -17,14 +17,8 @@ input.search-query[type="search"] {
     width: 190px;
     min-width: 32px;
     height: 30px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 3px;
-    padding-right: 3px;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 0;
-    margin-right: 5px;
+    padding: 5px 3px;
+    margin: 0 5px 0 0;
     border-top-width: 1px;
     border-bottom-width: 1px;
     border-left-width: 1px;
@@ -37,10 +31,7 @@ input.search-query[type="search"] {
     border-bottom-color: rgb(210, 210, 210);
     border-left-color: rgb(210, 210, 210);
     border-right-color: rgb(210, 210, 210);
-    border-top-left-radius: 2px;
-    border-top-right-radius: 2px;
-    border-bottom-right-radius: 2px;
-    border-bottom-left-radius: 2px;
+    border-radius: 2px;
     float: left;
     display: block;
     transition-property: all;
@@ -56,20 +47,14 @@ input.search-query[type="search"]:hover, input.search-query[type="search"]:focus
     background-attachment: scroll;
     background-clip: border-box;
     background-origin: padding-box;
-    background-position-x: 0%;
-    background-position-y: 0%;
+    background-position-x: 0;
+    background-position-y: 0;
     background-size: auto auto;
     color: #222222;
     font-size: 15px;
     text-align: left;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 3px;
-    padding-right: 3px;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 0;
-    margin-right: 5px;
+    padding: 5px 3px;
+    margin: 0 5px 0 0;
     border-top-width: 1px;
     border-bottom-width: 1px;
     border-left-width: 1px;
@@ -82,10 +67,7 @@ input.search-query[type="search"]:hover, input.search-query[type="search"]:focus
     border-bottom-color: rgb(200, 200, 200);
     border-left-color: rgb(200, 200, 200);
     border-right-color: rgb(200, 200, 200);
-    border-top-left-radius: 2px;
-    border-top-right-radius: 2px;
-    border-bottom-right-radius: 2px;
-    border-bottom-left-radius: 2px;
+    border-radius: 2px;
     float: left;
     display: block;
 }
@@ -93,14 +75,8 @@ input.search-query[type="search"]:hover, input.search-query[type="search"]:focus
 .searchform {
     width: 100%;
     height: 30px;
-    padding-top: 0;
-    padding-bottom: 0;
-    padding-left: 0;
-    padding-right: 0;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 0;
-    margin-right: 0;
+    padding: 0;
+    margin: 0;
     overflow-x: hidden;
     overflow-y: hidden;
     float: left;
@@ -124,14 +100,8 @@ input.search-query[type="search"]:hover, input.search-query[type="search"]:focus
     height: 30px;
     min-height: 30px;
     max-height: 100%;
-    padding-top: 0;
-    padding-bottom: 0;
-    padding-left: 0;
-    padding-right: 0;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 0;
-    margin-right: 0;
+    padding: 0;
+    margin: 0;
     border-top-width: 1px;
     border-bottom-width: 1px;
     border-left-width: 1px;
@@ -144,10 +114,7 @@ input.search-query[type="search"]:hover, input.search-query[type="search"]:focus
     border-bottom-color: rgb(50, 50, 50);
     border-left-color: rgb(50, 50, 50);
     border-right-color: rgb(50, 50, 50);
-    border-top-left-radius: 2px;
-    border-top-right-radius: 2px;
-    border-bottom-right-radius: 2px;
-    border-bottom-left-radius: 2px;
+    border-radius: 2px;
     cursor: pointer;
     overflow-x: hidden;
     overflow-y: hidden;
@@ -174,10 +141,7 @@ input.search-query[type="search"]:hover, input.search-query[type="search"]:focus
     height: 30px;
     min-height: 30px;
     max-height: 100%;
-    padding-top: 0;
-    padding-bottom: 0;
-    padding-left: 0;
-    padding-right: 0;
+    padding: 0;
     border-top-width: 1px;
     border-bottom-width: 1px;
     border-left-width: 1px;
@@ -190,10 +154,7 @@ input.search-query[type="search"]:hover, input.search-query[type="search"]:focus
     border-bottom-color: rgb(40, 40, 40);
     border-left-color: rgb(40, 40, 40);
     border-right-color: rgb(40, 40, 40);
-    border-top-left-radius: 2px;
-    border-top-right-radius: 2px;
-    border-bottom-right-radius: 2px;
-    border-bottom-left-radius: 2px;
+    border-radius: 2px;
     overflow-x: hidden;
     overflow-y: hidden;
 }
@@ -204,14 +165,8 @@ input.search-query[type="search"]:hover, input.search-query[type="search"]:focus
     background-color: rgb(255, 255, 255);
     color: #000000;
     text-align: left;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-top: 0;
-    margin-bottom: 10px;
-    margin-left: 0;
-    margin-right: 0;
+    padding: 10px;
+    margin: 0 0 10px;
     border-top-width: 1px;
     border-right-width: 1px;
     border-bottom-width: 1px;
@@ -224,20 +179,14 @@ input.search-query[type="search"]:hover, input.search-query[type="search"]:focus
     border-right-color: rgb(154, 154, 154);
     border-bottom-color: rgb(154, 154, 154);
     border-left-color: rgb(154, 154, 154);
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-    border-bottom-right-radius: 3px;
-    border-bottom-left-radius: 3px;
+    border-radius: 3px;
     float: left;
     display: block;
 }
 
 .m-search .list-title, .m-search .list-perex, .m-search ul.list-info {
     background-color: transparent;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 0;
-    margin-right: 0;
+    margin: 0;
     border-top-width: 0;
     border-right-width: 0;
     border-bottom-width: 0;
@@ -274,10 +223,7 @@ input.search-query[type="search"]:hover, input.search-query[type="search"]:focus
     border-right-color: currentcolor;
     border-bottom-color: rgb(201, 201, 201);
     border-left-color: currentcolor;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
+    border-radius: 0;
 }
 
 /* search page - end */
